# vartests

./: LICENSE.md  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py  vartests.py  version.py
media/: Example.xlsx
src/vartests/: __init__.py  vartests.py  version.py
tests/: test_vartests.py
vartests/: __init__.py  vartests.py  version.py
