[tool.poetry]
name = "vartests"
version = "0.1.13"
description = "Statistic tests for Value at Risk (VaR) Models."
authors = ["Rafael Rodrigues <rafael.rafarod@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.4"
arch = "^5.0.1"
pygosolnp = "^2021.5.1"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
